this is first commit

--- a/views/shoesupdate.pug
+++ b/views/shoesupdate.pug
@@ -30,7 +30,7 @@ block content
       input(class="btn btn-success" type="submit") 
   
     script. 
-      document.forms['shoesForm'].addEventListener('submit', (event) => { 
+      document.forms['IcecreamForm'].addEventListener('submit', (event) => { 
         event.preventDefault(); 
         // TODO do something here to show user that form is being submitted 
         fetch(event.target.action, { 
