--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,31 @@
-extends layout
+//- extends layout
 
-block content
-  h1= title
-  p Welcome to Samyuktha kondaparthi  #{title}
-  button(type="button", class="btn btn-secondary", onclick="update()") Press Me
-  <br>
-  <br>
-  div(id="target") Display
-  <br>
-  a(href = '/shoes') Shoes Page link
-  |
-  script. 
-    let client_count = 0;
-    function update() {
-      client_count = client_count + 1;
-      document.getElementById("target").innerHTML = `Value now ${client_count}`  ;
-      }
+//- block content
+//-   h1= title
+//-   p Welcome to Samyuktha kondaparthi  #{title}
+//-   button(type="button", class="btn btn-secondary", onclick="update()") Press Me
+//-   <br>
+//-   <br>
+//-   div(id="target") Display
+//-   <br>
+//-   a(href = '/shoes') Shoes Page link
+//-   |
+//-   script. 
+//-     let client_count = 0;
+//-     function update() {
+//-       client_count = client_count + 1;
+//-       document.getElementById("target").innerHTML = `Value now ${client_count}`  ;
+//-       }
+
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/shoes") Take me to Shoes 
+    br 
+    a(href="/logout") Logout
