this is last commit

--- a/views/Shoes.pug
+++ b/views/Shoes.pug
@@ -6,20 +6,19 @@ block content
   p Search results Shoes   
   p
   - let items = results 
-    div(class="container-fluid") 
-    div(class="row m-1") 
-      each item in items  
-        - let destination = `dispatch(\"/shoes/update?id=${item._id}\")` 
-        - let details = `dispatch(\"/shoes/detail?id=${item._id}\")` 
-        div(class="row-sm-2", class="m-1") Item #{item.type}(#{item.brand}) is #{item.size} 
-          <br><br>
-          a(class="btn btn-success", href="/shoes/create") Create
-          <br>
-          span(class="btn btn-info", onclick= details) Details
-          <br>
-          a(class="btn btn-danger", href="/shoes/Delete/?id="+item._id) Delete
-          <br>
-          button.btn( class="btn-primary ml-1", onclick= destination) Update 
+    div(class="container-fluid")
+        div(class="row")
+            - let destination1 = `dispatch(\"/shoes/create\")`
+            button.btn(class="btn-success ms-1", style="width: 150px" onclick= destination1) Create            
+            - let shoes = results
+            each v, index in shoes 
+                - let destination = `dispatch(\"/shoes/update?id=${v._id}\")`
+                - let destination2 = `dispatch(\"/shoes/delete?id=${v._id}\")`
+                - let destination3 = `dispatch(\"/shoes/detail?id=${v._id}\")`
+                div(class="row-sm-2", class="m-1") Item #{v.type} #{v.brand} #{v.size}
+                    button.btn(class="btn-primary ms-1", onclick= destination) Update
+                    button.btn(class="btn-info ms-1", onclick= destination3) Detail
+                    button.btn(class="btn-danger ms-1", onclick= destination2) Delete
    
   script. 
     function dispatch(path){ 
